Update website with improved navigation and deployment configuration

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Rakshith Rai A - Full Stack Developer Portfolio" />
+    <meta name="keywords" content="Rakshith Rai, Web Developer, Full Stack Developer, React, Portfolio" />
+    <title>Rakshith Rai A</title>
   </head>
   <body>
     <div id="root"></div>
