--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/images/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Rakshith Rai A - Full Stack Developer Portfolio" />
     <meta name="keywords" content="Rakshith Rai, Web Developer, Full Stack Developer, React, Portfolio" />
